[project]
name = "comfyui_cut_audio"  # Unique identifier (immutable after creation)
description = "ComfyUI custom nodes for audio preprocessing"
version = "1.0.0"  # Semantic versioning
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "torch"
]

[project.urls]
Repository = "https://github.com/mailzwj/ComfyUI-cut-audio"

[tool.comfy]
PublisherId = "meet-ai"
DisplayName = "ComfyUI Cut Audio"
Icon = ""